# ProjectX

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.ark/: .gitignore  .installed.json  config.toml  workflow.md
.ark/specs/: INDEX.md
.ark/templates/: PLAN.md  PRD.md  REVIEW.md  SPEC.md  VERIFY.md
.ark/workspace/: index.md
.claude/: settings.json
.claude/agents/: ark-researcher.md  ark-reviewer.md  ark-verifier.md
.codex/: config.toml  hooks.json
.codex/agents/: ark-researcher.toml  ark-reviewer.toml  ark-verifier.toml
.github/workflows/: ci.yml  mdbook.yml
docs/: DEV.md  INST.md  MANUAL_REVIEW.md  PERF_DEV.md  PROGRESS.md  README.md  XVISOR.md
docs/CSR/: CSR_PLAN_REVIEW.md
docs/book/: SUMMARY.md  book.toml  building.md  first-kernel.md  introduction.md  overview.md
docs/boot/: 00_PLAN.md  00_REVIEW.md  01_PLAN.md  02_IMPL.md
docs/csr/: IMPL_REVIEW.md
docs/debian/: 01_REVIEW.md  02_PLAN.md  03_PLAN.md  04_MASTER.md  04_PLAN.md  04_REVIEW.md
docs/dev/: 00_IMPL.md  00_IMPL_MASTER.md  00_MASTER.md  00_REVIEW.md  01_IMPL.md  01_PLAN.md  01_REVIEW.md  02_IMPL_MASTER.md  02_PLAN.md  03_PLAN.md  04_IMPL.md  04_IMPL_REVIEW.md  04_MASTER.md  04_REVIEW.md  05_MASTER.md  05_PLAN.md
docs/difftest/: 00_MASTER.md  00_PLAN.md  01_MASTER.md  02_PLAN.md  05_PLAN.md  07_IMPL.md  07_PLAN.md  07_REVIEW.md
docs/keyboard/: 00_MASTER.md  00_PLAN.md  01_IMPL.md  01_PLAN.md
docs/klib/: PLAN.md
docs/mem/: MEM_PLAN.md  MEM_PLAN_REVIEW_GEMINI.md
docs/mm/: MEM_IMPL_REVIEW.md
docs/perf/: README.md
docs/tasks/: README.md
docs/template/: IMPL.template  IMPL_MASTER.template  IMPL_REVIEW.template  PLAN.tmplate  REVIEW.template  SPEC.template
docs/trace/: 01_PLAN.md  (+9 more)
resource/: .gitignore  Makefile  debian.mk  linux.mk  opensbi.mk  xemu-2hart.dts  xemu-debian-2hart.dts  xemu-debian.dts  xemu.dts  xv6.mk
src/: main.rs
xam/: Cargo.toml  Makefile
xam/xhal/: Cargo.toml  build.rs  linker.lds.S
xam/xhal/src/: lib.rs  long_items.rs
xam/xhal/src/arch/: mod.rs
xam/xhal/src/platform/: mod.rs
xam/xhal/src/platform/dummy/: mod.rs
xam/xhal/src/platform/qemu_virt/: boot.rs  console.rs  misc.rs  mod.rs  timer.rs  trap.rs
xam/xhal/src/platform/xemu/: boot.rs  misc.rs  mod.rs  timer.rs  trap.S
xcore/: Cargo.toml  build.rs
xcore/src/: error.rs  lib.rs
xcore/src/config/: mod.rs
xcore/src/cpu/: core.rs  mod.rs
xcore/src/cpu/riscv/: inst.rs  mem.rs  mod.rs
xcore/src/cpu/riscv/inst/: base.rs  mul.rs  privileged.rs
xcore/src/isa/: decoder.rs  mod.rs
xcore/src/isa/instpat/: riscv.instpat
xcore/src/isa/loongarch/: mod.rs
xcore/src/isa/loongarch32/: mod.rs
xcore/src/isa/loongarch64/: mod.rs
xcore/src/isa/riscv/: decoder.rs  mod.rs  reg.rs  rv32.rs  rv32.toml  util.rs
xcore/src/isa/riscv32/: mod.rs
xcore/src/isa/riscv64/: mod.rs
xcore/src/memory/: mod.rs
xcore/src/utils/: bit.rs  macros.rs  mod.rs
xdb/: Cargo.toml
xemu/: Cargo.toml  Makefile  README.md
xemu/tools/difftest/spike/: spike_ffi.h  spike_wrapper.cc
xemu/tools/xlogger/: Cargo.toml
xemu/tools/xlogger/src/: lib.rs
xemu/xcore/: Cargo.toml
xemu/xcore/src/: error.rs  lib.rs
xemu/xcore/src/arch/: mod.rs
xemu/xcore/src/arch/loongarch/: mod.rs
xemu/xcore/src/arch/loongarch/cpu/: mod.rs
xemu/xcore/src/arch/loongarch/isa/: mod.rs
xemu/xcore/src/arch/riscv/: cpu.rs  device.rs  mod.rs
xemu/xcore/src/arch/riscv/cpu/: context.rs  csr.rs  debug.rs  icache.rs  inst.rs  mm.rs  mod.rs  trap.rs
xemu/xcore/src/arch/riscv/cpu/csr/: mip.rs  ops.rs
xemu/xcore/src/arch/riscv/cpu/inst/: atomic.rs  base.rs  compressed.rs  float.rs  mul.rs  privileged.rs  zicsr.rs
xemu/xcore/src/arch/riscv/cpu/mm/: mmu.rs  pmp.rs  tlb.rs
xemu/xcore/src/arch/riscv/cpu/trap/: exception.rs  handler.rs  interrupt.rs
xemu/xcore/src/arch/riscv/device/: aclint.rs  mod.rs  plic.rs
xemu/xcore/src/arch/riscv/device/aclint/: mswi.rs  mtimer.rs  sswi.rs
xemu/xcore/src/arch/riscv/device/intc/: aclint.rs  mod.rs  plic.rs
xemu/xcore/src/arch/riscv/device/intc/aclint/: mod.rs  mswi.rs  mtimer.rs  sswi.rs
xemu/xcore/src/arch/riscv/device/intc/plic/: core.rs  gateway.rs  mod.rs  source.rs
xemu/xcore/src/arch/riscv/device/plic/: core.rs  gateway.rs
xemu/xcore/src/config/: mod.rs
xemu/xcore/src/cpu/: core.rs  debug.rs  mem.rs  mod.rs
xemu/xcore/src/cpu/loongarch/: mod.rs
xemu/xcore/src/cpu/riscv/: context.rs  csr.rs  debug.rs  inst.rs  mem.rs  mm.rs  mmu.rs  mod.rs  pmp.rs  trap.rs
xemu/xcore/src/cpu/riscv/csr/: mod.rs  mstatus.rs  ops.rs  privilege.rs
xemu/xcore/src/cpu/riscv/inst/: atomic.rs  base.rs  compressed.rs  float.rs  mul.rs  privileged.rs  zicsr.rs
xemu/xcore/src/cpu/riscv/mm/: mmu.rs  pmp.rs  tlb.rs
xemu/xcore/src/cpu/riscv/trap/: cause.rs  exception.rs  handler.rs  interrupt.rs  mod.rs
xemu/xcore/src/device/: bus.rs  irq.rs  mod.rs  ram.rs  test_finisher.rs  uart.rs  virtio_blk.rs
xemu/xcore/src/device/intc/: aclint.rs  mod.rs  plic.rs
xemu/xcore/src/device/virtio/: defs.rs  mod.rs  queue.rs
xemu/xcore/src/isa/: mod.rs
xemu/xcore/src/isa/instpat/: riscv.instpat  riscv.pest
xemu/xcore/src/isa/loongarch/: mod.rs
xemu/xcore/src/isa/riscv/: decoder.rs  inst.rs  mod.rs  reg.rs
xemu/xcore/src/memory/: mod.rs
xemu/xcore/src/utils/: bit.rs  logo.rs  macros.rs  mod.rs  riscv.rs
xemu/xcore/tests/: arch_isolation.rs
xemu/xdb/: Cargo.toml  build.rs
xemu/xdb/src/: cli.rs  cmd.rs  expr.rs  main.rs  session.rs  watchpoint.rs
xemu/xdb/src/difftest/: gdb.rs  mod.rs  qemu.rs  spike.rs
xlib/: Makefile
xvisor/: Cargo.toml  Makefile  README.md  build.rs  linker.ld
xvisor/src/: main.rs
xvisor/src/hal/: mod.rs
xvisor/src/hal/arch/loongarch/: mod.rs
xvisor/src/hal/arch/riscv/: boot.rs  cpu.rs  csr.rs  mod.rs  trap.rs
xvisor/src/hal/arch/riscv/trap/: cause.rs  mod.rs  trap.S
xvisor/src/hal/platform/qemu/: halt.rs  mod.rs  uart.rs
xvisor/src/hal/platform/xemu/: mod.rs
xvisor/src/mm/: mod.rs
xvisor/src/sbi/: mod.rs
xvisor/src/vcpu/: mod.rs
xvisor/src/vm/: mod.rs
(+551 files in other folders)
