[package]
name = "xemu"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
xcore.workspace = true
xdb.workspace   = true

log = "0.4.28"

[workspace]
members = ["xcore", "xdb"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Anekoique <ctolu01@gmail.com>"]
repository = "https://github.com/Anekoique/Xemu.git"

[workspace.dependencies]
xcore = { path = "./xcore"}
xdb   = { path = "./xdb"}

log = "0.4.28"

