[package]
name = "xcore"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
log.workspace = true

memory_addr = "0.4"
bitflags = "2.9"
bytemuck = "1.14"
itertools = "0.14"
pest = "2.8.3"
pest_derive = "2.8.3"
toml = "0.9.2"