[workspace]
members = ["xcore", "xdb"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Anekoique <ctolu01@gmail.com>"]
repository = "https://github.com/Anekoique/ProjectX/tree/main/xemu"

[workspace.dependencies]
xcore = { path = "./xcore" }
xdb = { path = "./xdb" }

log = "0.4.28"
