[package]
name = "xhal"
version = "0.1.0"
edition = "2024"
authors = ["Anekoique <ctolu01@gmail.com>"]
repository = "https://github.com/Anekoique/ProjectX/tree/main/xam/xhal"

[dependencies]
cfg-if = "1.0"

xconfig = { path = "../xconfig" }

[lib]
crate-type = ["rlib", "staticlib"]

[build-dependencies]
xconfig = { workspace = true }
