[package]
name = "xcore"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository = "https://github.com/Anekoique/ProjectX/tree/main/xemu/xcore"

[features]
default = []
debug = []
difftest = ["debug"]

[dependencies]
log.workspace = true
xlogger.workspace = true

memory_addr = "0.4"

bitflags = "2"
libc = "0.2"
bytemuck = "1.14"
cfg-if = "1.0"
inherit-methods-macro = "0.1.0"
itertools = "0.14"
num_enum = "0.7.5"
pest = "2.8.3"
pest_derive = "2.8.3"
softfloat_pure = { git = "https://github.com/HarryR/softfloat-pure" }
toml = "1.0.7"