[package]
name = "xdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository = "https://github.com/Anekoique/ProjectX/tree/main/xemu/xdb"

[features]
default = []
debug = ["xcore/debug"]

[dependencies]
xcore.workspace = true
xlogger.workspace = true
log.workspace = true

clap = { version = "4.5", features = ["derive"] }
regex = "1"
shlex = "1.3"
