[package]
name = "xdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository = "https://github.com/Anekoique/ProjectX/tree/main/xemu/xdb"

[features]
default = []
debug = ["xcore/debug"]
difftest = ["xcore/difftest"]

[dependencies]
xcore.workspace = true
xlogger.workspace = true
log.workspace = true

anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
shlex = "1.3"

[build-dependencies]
cc = "1"
